<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="violators.traffic.com.trafficviolators.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/side_nav_bar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="42sp"
            android:gravity="center"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:cardCornerRadius="4dp"
        android:elevation="8dp"
        app:cardElevation="8dp"
        android:layout_weight="10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="REGISTER"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/txt_fullname"
                style="@style/editTextStyle"
                android:hint="Full Name"
                android:inputType="textPersonName"
                android:drawableEnd="@drawable/ic_name"/>

            <EditText
                android:id="@+id/txt_dob"
                style="@style/editTextStyle"
                android:hint="Date of Birth"
                android:clickable="true"
                android:inputType="datetime"
                android:drawableEnd="@drawable/ic_date"/>

            <EditText
                android:id="@+id/txt_email"
                style="@style/editTextStyle"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_email"/>

            <EditText
                android:id="@+id/txt_password"
                style="@style/editTextStyle"
                android:hint="@string/hint_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                tools:focusableInTouchMode="true"
                android:drawableEnd="@drawable/ic_lock"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_arrow_forward"
                android:layout_gravity="center|bottom"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textColor="#888888"
        android:textSize="16sp"
        android:gravity="center"/>

</LinearLayout>
