<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="violators.traffic.com.trafficviolators.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/side_nav_bar"
        android:fitsSystemWindows="true"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Traffic Violators"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"/>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingTop="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            style="@style/editTextStyle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_email"/>

        <EditText
            android:id="@+id/password"
            style="@style/editTextStyle"
            android:hint="@string/hint_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            tools:focusableInTouchMode="true"
            android:drawableEnd="@drawable/ic_lock"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="Login"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:focusable="false"
            android:text="@string/btn_forgot_password"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight=".5"
            android:background="@color/colorDivider"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NOT A MEMBER ?"
            android:textSize="14sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textAlignment="center"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight=".5"
            android:background="@color/colorDivider"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOffWhite"
        android:text="Register"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored" />

</LinearLayout>
